--- a/TODO
+++ b/TODO
@@ -23,6 +23,9 @@ Inversion of Control, (or IoC), is about getting freedom (You get married, you l
 https://zhuanlan.zhihu.com/p/33492169
 https://www.cnblogs.com/pqjwyn/p/9846292.html
 https://www.jianshu.com/p/1c266814b436
+angular inject 介绍
+https://www.jianshu.com/p/4b10948d456c
+https://www.jianshu.com/p/21f3f4834418
 
  IoC是什么
 Ioc—Inversion of Control，即“控制反转”，不是什么技术，而是一种设计思想。在Java开发中，Ioc意味着将你设计好的对象交给容器控制，而不是传统的在你的对象内部直接控制。如何理解好Ioc呢？理解好Ioc的关键是要明确“谁控制谁，控制什么，为何是反转（有反转就应该有正转了），哪些方面反转了”，那我们来深入分析一下：
