--- a/TODO
+++ b/TODO
@@ -21,8 +21,8 @@ Inversion of Control, (or IoC), is about getting freedom (You get married, you l
 
 
 https://zhuanlan.zhihu.com/p/33492169
-https://www.cnblogs.com/pqjwyn/p/9846292.html
-https://www.jianshu.com/p/1c266814b436
+https://www.cnblogs.com/pqjwyn/p/9846292.html(JS DI)
+https://www.jianshu.com/p/1c266814b436(Java IOC)
 angular inject 介绍
 https://www.jianshu.com/p/4b10948d456c(Angular依赖注入介绍)
 https://www.jianshu.com/p/21f3f4834418(angular 初认)
